<package format="2">
  <name>cnoid_ros_utils</name>
  <version>0.1.0</version>
  <description>
    ROS-based Choreonoid utilities
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/cnoid_ros_utils</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>eigen</build_depend>

  <doc_depend>doxygen</doc_depend>
</package>
